# biotecza_bot

./: .gitignore  Cargo.toml
src/: bot_logic.rs  database.rs  main.rs  whatsapp.rs
src/bot_logic/: lab.rs  mod.rs  models.rs  pharmacy.rs  states.rs  users.rs
src/database/: lab.rs  mod.rs  pharmacy.rs  users.rs
src/whatsapp/: client.rs  mod.rs  webhook.rs
