[package]
name = "biotecza_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "rust_decimal", "uuid"] }
dotenvy = "0.15"
rust_decimal = { version = "1.30", features = ["serde-float"] }
uuid = { version = "1.20.0", features = ["v4"] }
regex = "1"
